[package]
name = "pneutype-derive-tests"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2021"

[dependencies]
pneutype = { path = "../pneutype" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pneutype = { path = "../pneutype" }
serde_json = "1"
url = "2"
